# construct

./: .appveyor-build.sh  .appveyor.yml  .cvsignore  .envrc  .gitignore  .gitmodules  .hgignore  .hgtags  .indent.pro  .mailmap  .travis.yml  BUGS  CREDITS  ChangeLog  Doxyfile  GIT-Access  IDEAS  INSTALL  LICENSE  Makefile.am  Makefile.in  Mercurial-Access  NEWS  NEWS.md  README.FIRST  README.md  STATUS.md  SVN-Access  TODO  aclocal.m4  appveyor.yml  autogen.sh  configure  configure.ac  default.nix  dwr.patch  flake.nix  install-sh  shell.nix
authd/: Makefile.am  Makefile.in  auth.c  auth.h  authd.c  authd.cc  authd.h  dns.c  dns.cc  dns.h  getaddrinfo.c  getaddrinfo.cc  getaddrinfo.h  getnameinfo.c  getnameinfo.cc  getnameinfo.h  notice.c  notice.cc  notice.h  provider.c  provider.cc  provider.h  res.c  res.cc  res.h  reslib.c  reslib.cc  reslib.h  reslist.c  reslist.cc
authd/providers/: blacklist.c  blacklist.cc  ident.c  ident.cc  opm.c  opm.cc  rdns.c  rdns.cc
bandb/: Makefile.am  Makefile.in  bandb.c  bandb.cc  bantool.c  bantool.cc  rsdb.h  rsdb_snprintf.c  rsdb_sqlite3.c  rsdb_sqlite3.cc  sqlite3.c  sqlite3.h
charybdis/: .gitignore  Makefile.am  README.md  charybdis.cc  charybdis.h  console.cc  getopt.cc  params.h
construct/: Makefile.am  README.md  console.cc  console.h  construct.cc  construct.h  homeserver.cc  homeserver.h  lgetopt.cc  lgetopt.h  matrix.cc  matrix.h  signals.cc  signals.h
doc/: .gitignore  ARCHITECTURE.md  BUILD.md  CIDR.txt  CPP_HOWTO.md  FAQ.md  Hybrid-team  Makefile.am  Makefile.in  README.cidr_bans  Ratbox-team  SETUP.md  STYLE.md  TROUBLESHOOTING.md  TUNING.md  account-notify.txt  challenge.txt  collision_fnc.txt  credits-past.txt  example.conf  extban.txt  hooks.txt  index.txt  ircd.8  ircd.conf.example  ircd.example.conf  ircd.motd  logfiles.txt  modeg.txt  modes.txt  monitor.txt  operguide.txt  reference.conf  sasl.txt  server-version-info  server-version-info.txt  services.txt  spamfilter.conf.example  tgchange.txt  whats-new-2.0.txt  (+1 more)
doc/features/: challenge.txt  collision_fnc.txt  extban.txt  index.txt  modeg.txt  monitor.txt  sasl.txt  services.txt  tgchange.txt
doc/help/: Makefile.am
doc/old/: Authors
doc/technical/: README.TSora  capab.txt  cluster.txt  euid.txt  event.txt  fd-management.txt  file-management.txt  hooks.txt  hostmask.txt  index.txt  linebuf.txt  network.txt  send.txt  ts5.txt  ts6-protocol.txt  ts6.txt
extensions/: Makefile.am  Makefile.in  README  chm_adminonly.c  chm_adminonly.cc  chm_insecure.c  chm_insecure.cc  chm_nonotice.c  chm_nonotice.cc  chm_operonly.c  chm_operonly.cc  chm_operonly_compat.c  chm_operonly_compat.cc  chm_operpeace.c  chm_operpeace.cc  chm_quietunreg_compat.c  chm_quietunreg_compat.cc  chm_spamfilter.c  chm_spamfilter.cc  chm_sslonly.c  chm_sslonly.cc  chm_sslonly_compat.c  chm_sslonly_compat.cc  createauthonly.c  createauthonly.cc  createoperonly.c  createoperonly.cc  example_module.c  example_module.cc  extb_account.c  extb_account.cc  extb_canjoin.c  extb_canjoin.cc  extb_channel.c  extb_channel.cc  extb_combi.c  extb_combi.cc  extb_extgecos.c  extb_extgecos.cc  extb_hostmask.c  (+108 more)
include/ircd/: .gitignore  Makefile.am  README.md  allocator.h  array_view.h  asio.h  assert.h  authproc.h  b58.h  b64.h  backtrace.h  bandbi.h  base.h  base64.h  beep.h  buffer.h  bufs.h  byte_view.h  cache.h  capability.h  cbor.h  certfp.h  channel.h  cl.h  (+156 more)
ircd/: .gitignore  .indent.pro  Makefile.am  Makefile.in  README.md  aio.cc  aio.h  allocator.cc  allocator_gnu.cc  allocator_je.cc  ap.cc  assert.cc  authd.c  authproc.c  authproc.cc  b58.cc  b64.cc  backtrace.cc  bandbi.c  bandbi.cc  base.cc  base64.cc  batch.c  beep.cc  blacklist.c  cache.c  cache.cc  cache_serv.cc  capability.c  capability.cc  cbor.cc  channel.c  channel.cc  chmode.c  chmode.cc  cl.cc  class.c  class.cc  client.c  client.cc  (+208 more)
libratbox/: .indent.pro  CREDITS  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  libratbox.pc.in
librb/: CREDITS  ChangeLog  Makefile.am  TODO  acinclude.m4  autogen.sh  configure  configure.ac  librb.pc.in
matrix/: Makefile.am  acquire.cc  app.cc  breadcrumb_rooms.cc  breadcrumbs.cc  bridge.cc  burst.cc  conf.cc  create.cc  dbs.cc  dbs_desc.cc  dbs_event_column.cc  dbs_event_horizon.cc  dbs_event_idx.cc  dbs_event_json.cc  dbs_event_refs.cc  dbs_event_sender.cc  dbs_event_state.cc  dbs_event_type.cc  dbs_init.cc  dbs_room_events.cc  dbs_room_head.cc  dbs_room_joined.cc  dbs_room_state.cc  dbs_room_state_space.cc  dbs_room_type.cc  device.cc  display_name.cc  error.cc  event.cc  event_append.cc  event_auth.cc  event_cached.cc  event_conforms.cc  event_fetch.cc  event_get.cc  event_horizon.cc  event_id.cc  event_index.cc  event_prefetch.cc  (+102 more)
modules/: .cvsignore  .depend  Makefile.am  Makefile.in  README.md  assert.cc  cap_account_tag.c  cap_account_tag.cc  cap_batch.c  cap_server_time.c  cap_server_time.cc  chm_nocolour.c  chm_nocolour.cc  chm_noctcp.c  chm_noctcp.cc  conf.cc  console.cc  crypto.cc  events.cc  future.cc  index.cc  ircd.js  kernel.cc  listen.cc  llvm.cc  m_accept.c  m_accept.cc  m_admin.c  m_admin.cc  m_alias.c  m_alias.cc  m_away.c  m_away.cc  m_ban.cc  m_breadcrumb_rooms.cc  m_breadcrumbs.cc  m_bridge.cc  m_bridge_register.cc  m_cap.c  m_cap.cc  (+241 more)
rb/: Makefile.am  README.md  arc4random.c  balloc.c  commio.c  crypt.c  devpoll.c  dictionary.c  epoll.c  event.c  format.cc  gnutls.c  helper.c  kqueue.c  linebuf.c  mbedtls.c  nossl.c  openssl.c  patricia.c  poll.c  ports.c  radixtree.c  rawbuf.c  rb.c  rb.cc  rb_memory.c  select.c  sigio.c  terminate.cc  tools.c  unix.c  version.c  win32.c
share/: Makefile.am
ssld/: Makefile.am  Makefile.in  ssld.c  ssld.cc
tools/: .cvsignore  Dockerfile  Dockerfile.mujx  Makefile.am  Makefile.in  README  README.mkpasswd  appveyor-build.sh  boostrap.sh  buildjs.sh  buildpbc.sh  buildrocks.sh  convertilines.c  convertklines.c  doxygen.conf  genssl.in  genssl.sh  genssl.sh.in  mkfingerprint.c  mkfingerprint.cc  mkkeypair  mkpasswd.c  mkpasswd.cc  smoketest.sh  synapse.db.py  untabify  viconf.c
(+1572 files in other folders)
